tests/sksl/errors/InterfaceBlockPrivateType.glsl
### Compilation failed:

error: 2: type '$mat' is private
    $mat g;
    ^^^^
1 error
